--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ env/
 ..__pycache__/
 .__pycache__/
 ..ali/
+static/MERRA2_400.tavg1_2d_aer_Nx.20250901.nc4
+./static/MERRA2_400.tavg1_2d_aer_Nx.20250901.nc4
